adding hue to the repository

--- a/public/css/less/zulworks.less
+++ b/public/css/less/zulworks.less
@@ -27,3 +27,32 @@ header {
 	.grad(@grad-start, @grad-end);
 	.shadow();
 }
+
+.navbar .nav {
+    width: 100%;
+}
+
+.navbar .nav > li.right {
+    float:right;
+    right: 0;
+    display: block;
+    
+    img {
+        height: 40px;
+        width: 40px;
+    }
+}
+
+div#index-card {
+    padding-top:40px;
+    background: #ccc;
+    z-index:1000;
+    position:fixed;
+    display:block;
+    width:240px;
+    padding-left:5px;
+    display:none;
+    top:0;
+    right:0;
+    border-radius: 5px;
+}
